--- a/WinForm/bin/WinForm.exe.config
+++ b/WinForm/bin/WinForm.exe.config
@@ -3,4 +3,7 @@
 	<connectionStrings>
 		<add name="conn" connectionString="Data Source=(local)\SQL2012; Initial Catalog=YuLin; User ID=sa; Password=2frogs;"/>
 	</connectionStrings>
+	<!--<appSettings>
+		<add key="ReportDirectory" value="E:\Report"/>
+	</appSettings>-->
 </configuration>
