--- a/Solution/Entities/Entities.csproj
+++ b/Solution/Entities/Entities.csproj
@@ -57,8 +57,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SourceTableSheet.cs" />
+    <Compile Include="EntityBase.cs" />
+    <Compile Include="TargetTableSheetColumn.cs" />
+    <Compile Include="TargetTable.cs" />
+    <Compile Include="TargetTableSheet.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SourceTable.cs" />
+    <Compile Include="SourceTableSheetColumn.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj">
+      <Project>{1043b141-7b46-4cea-8738-387167fc9f2a}</Project>
+      <Name>DataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
