--- a/Solution/Logging/Logging.csproj
+++ b/Solution/Logging/Logging.csproj
@@ -49,7 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net">
-      <HintPath>..\WinForm\bin\log4net.dll</HintPath>
+      <HintPath>..\..\Deploy\Third Part Files\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
