--- a/Solution/WinForm/WinForm.csproj
+++ b/Solution/WinForm/WinForm.csproj
@@ -53,12 +53,12 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
@@ -105,6 +105,10 @@
     <ProjectReference Include="..\Exporter\Exporter.csproj">
       <Project>{1659c989-dd18-42b8-8301-688e3af44b18}</Project>
       <Name>Exporter</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Helper\Helper.csproj">
+      <Project>{22f7da42-534d-44ab-9b3c-06e596063f98}</Project>
+      <Name>Helper</Name>
     </ProjectReference>
     <ProjectReference Include="..\Importer\Importer.csproj">
       <Project>{dbaa65e3-e0bf-4b5e-a2a8-73eba8087b24}</Project>
