Using Reporting as namespace

--- a/Solution/DataAccess/DataAccess.csproj
+++ b/Solution/DataAccess/DataAccess.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1043B141-7B46-4CEA-8738-387167FC9F2A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataAccess</RootNamespace>
+    <RootNamespace>Reporting</RootNamespace>
     <AssemblyName>DataAccess</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
