--- a/Solution/Entities/Entities.csproj
+++ b/Solution/Entities/Entities.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{96E9B730-079D-4E27-A9C0-D3CCC040E45E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Entities</RootNamespace>
+    <RootNamespace>Reporting</RootNamespace>
     <AssemblyName>Entities</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
