--- a/Solution/Exporter/Exporter.csproj
+++ b/Solution/Exporter/Exporter.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1659C989-DD18-42B8-8301-688E3AF44B18}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Exporter</RootNamespace>
+    <RootNamespace>Reporting</RootNamespace>
     <AssemblyName>Exporter</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
