--- a/Solution/Helper/Helper.csproj
+++ b/Solution/Helper/Helper.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{22F7DA42-534D-44AB-9B3C-06E596063F98}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Helper</RootNamespace>
+    <RootNamespace>Reporting</RootNamespace>
     <AssemblyName>Helper</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
