--- a/Solution/Logging/Logging.csproj
+++ b/Solution/Logging/Logging.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{AC46281A-7423-4A16-8F4F-D27F9BB54519}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Logging</RootNamespace>
+    <RootNamespace>Reporting</RootNamespace>
     <AssemblyName>Logging</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
