Report 榆林分行风险贷款情况表-行业版 done

--- a/Solution/Exporter/Exporter.csproj
+++ b/Solution/Exporter/Exporter.csproj
@@ -66,6 +66,7 @@
     <Compile Include="BaseReport.cs" />
     <Compile Include="ExcelExporter.cs" />
     <Compile Include="LoanRiskPerMonth.cs" />
+    <Compile Include="LoanRiskPerMonthHYB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
