--- a/Solution/Exporter/Exporter.csproj
+++ b/Solution/Exporter/Exporter.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseReport.cs" />
+    <Compile Include="R_DKQKCX_D.cs" />
     <Compile Include="X_FXDKTB.cs" />
     <Compile Include="SF6301_141.cs" />
     <Compile Include="SF6401_141.cs" />
