--- a/Solution/WinForm/bin/Rpt.exe.config
+++ b/Solution/WinForm/bin/Rpt.exe.config
@@ -3,7 +3,8 @@
 	<connectionStrings>
 		<add name="conn" connectionString="Data Source=(local)\SQL2012; Initial Catalog=YuLin; User ID=sa; Password=2frogs;"/>
 	</connectionStrings>
-	<!--<appSettings>
-		<add key="ReportDirectory" value="E:\Report"/>
-	</appSettings>-->
+	<appSettings>
+		<!--<add key="ReportDirectory" value="E:\Report"/>-->
+		<add key="defaultScreen" value="about"/> <!--about (default), import, report-->
+	</appSettings>
 </configuration>
