--- a/Solution/WinForm/WinForm.csproj
+++ b/Solution/WinForm/WinForm.csproj
@@ -66,6 +66,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomizeReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CustomizeReport.Designer.cs">
+      <DependentUpon>CustomizeReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="CustomizeReport.resx">
+      <DependentUpon>CustomizeReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
