--- a/Solution/Entities/Entities.csproj
+++ b/Solution/Entities/Entities.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
     <Compile Include="ImportItem.cs" />
     <Compile Include="Import.cs" />
     <Compile Include="SourceTableSheet.cs" />
