--- a/Solution/Exporter/Exporter.csproj
+++ b/Solution/Exporter/Exporter.csproj
@@ -64,7 +64,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseReport.cs" />
-    <Compile Include="C_DQDJQK_M.cs" />
+    <Compile Include="C_JQDKMX_D.cs" />
+    <Compile Include="ImportLoanDaily.cs" />
+    <Compile Include="C_XZDKMX_D.cs" />
+    <Compile Include="C_DQDKQK_M.cs" />
     <Compile Include="X_FXDKTB.cs" />
     <Compile Include="SF6301_141.cs" />
     <Compile Include="SF6401_141.cs" />
