--- a/Solution/Exporter/Exporter.csproj
+++ b/Solution/Exporter/Exporter.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseReport.cs" />
+    <Compile Include="GF1101_121.cs" />
     <Compile Include="X_DKZLFL_M.cs" />
     <Compile Include="X_ZXQYZJXQ_S.cs" />
     <Compile Include="X_FXDKBH_D.cs" />
