Added GF1301-081, GF1302-081, GF1303-081, GF1304-081

--- a/Solution/Exporter/Exporter.csproj
+++ b/Solution/Exporter/Exporter.csproj
@@ -64,6 +64,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseReport.cs" />
+    <Compile Include="GF1302_081.cs" />
+    <Compile Include="GF1303_081.cs" />
+    <Compile Include="GF1304_081.cs" />
+    <Compile Include="GF1301_081.cs" />
     <Compile Include="GF1101_121.cs" />
     <Compile Include="X_DKZLFL_M.cs" />
     <Compile Include="X_ZXQYZJXQ_S.cs" />
