--- a/Solution/Exporter/Exporter.csproj
+++ b/Solution/Exporter/Exporter.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseReport.cs" />
+    <Compile Include="GF1900_151.cs" />
     <Compile Include="GF1403_111.cs" />
     <Compile Include="GF1103_121.cs" />
     <Compile Include="GF1302_081.cs" />
