--- a/Solution/Exporter/Exporter.csproj
+++ b/Solution/Exporter/Exporter.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseReport.cs" />
+    <Compile Include="X_BLDKJC_X.cs" />
     <Compile Include="SF6402_131.cs" />
     <Compile Include="GF1900_151.cs" />
     <Compile Include="SF6302_131.cs" />
