--- a/Solution/Entities/Entities.csproj
+++ b/Solution/Entities/Entities.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="Globals.cs" />
     <Compile Include="ImportItem.cs" />
     <Compile Include="Import.cs" />
     <Compile Include="SourceTableSheet.cs" />
