Include ShenFu data

--- a/Solution/Importer/Importer.csproj
+++ b/Solution/Importer/Importer.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Importer.cs" />
+    <Compile Include="ImporterSF.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
