Import 业务状况表 for orgs

--- a/Solution/WinForm/App.config
+++ b/Solution/WinForm/App.config
@@ -4,6 +4,7 @@
 		<add name="conn" connectionString="Data Source=(local)\SQL2012; Initial Catalog=YuLin; User ID=sa; Password=2frogs;"/>
 	</connectionStrings>
 	<appSettings>
+		<add key="LicenseTo" value="160610"/>
 		<!--<add key="ReportDirectory" value="E:\Report"/>-->
 		<add key="defaultScreen" value="about"/> <!--about (default), import, report-->
 	</appSettings>
