Enhance user experience when starting sql server service.

--- a/Solution/WinForm/WinForm.csproj
+++ b/Solution/WinForm/WinForm.csproj
@@ -66,6 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackgroundThread.cs" />
     <Compile Include="CustomizeDQDK.cs">
       <SubType>Form</SubType>
     </Compile>
