--- a/Solution/Entities/Entities.csproj
+++ b/Solution/Entities/Entities.csproj
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.cs" />
+    <Compile Include="AI_ImportColumn.cs" />
+    <Compile Include="AI_ImportColumnMapping.cs" />
     <Compile Include="Globals.cs" />
     <Compile Include="ImportItem.cs" />
     <Compile Include="Import.cs" />
