--- a/Solution/WinForm/bin/Rpt.exe.config
+++ b/Solution/WinForm/bin/Rpt.exe.config
@@ -5,6 +5,11 @@
 	</connectionStrings>
 	<appSettings>
 		<!--<add key="ReportDirectory" value="E:\Report"/>-->
-		<add key="defaultScreen" value="about"/> <!--about (default), import, report-->
+
+		<!--about (default), import, report-->
+		<add key="defaultScreen" value="about"/>
+
+		<!--true, false-->
+		<add key="showImportMiscMenu" value="true"/>
 	</appSettings>
 </configuration>
